add: authentication users from db, refactoring