@@ -1,5 +1,6 @@
 package cis.tinkoff.auth;
 
+import cis.tinkoff.auth.model.RefreshToken;
 import io.micronaut.runtime.event.annotation.EventListener;
 import io.micronaut.security.authentication.Authentication;
 import io.micronaut.security.errors.OauthErrorResponseException;
@@ -10,8 +11,9 @@ import org.reactivestreams.Publisher;
 import reactor.core.publisher.Flux;
 import reactor.core.publisher.FluxSink;
 
-
-import java.util.*;
+import java.util.HashMap;
+import java.util.List;
+import java.util.Map;
 
 import static io.micronaut.security.errors.IssuingAnAccessTokenErrorCode.INVALID_GRANT;
 
@@ -20,7 +22,6 @@ public class UserRefreshTokenPersistence implements RefreshTokenPersistence {
 
     // Note: old refresh tokens are never removed!
     private static final Map<String, RefreshToken> IN_MEMORY_REFRESH_TOKEN_STORE = new HashMap<>();
-
 
     @Override
     @EventListener
@@ -31,13 +32,12 @@ public class UserRefreshTokenPersistence implements RefreshTokenPersistence {
                 event.getAuthentication().getName() != null) {
             String payload = event.getRefreshToken();
 
+            event.getAuthentication().getRoles();
             IN_MEMORY_REFRESH_TOKEN_STORE.put(payload,
                     new RefreshToken(event.getRefreshToken(),
                             false,
                             event.getAuthentication().getName(),
-                            event.getAuthentication().getRoles() == null
-                                    ? Collections.emptyList()
-                                    : List.copyOf(event.getAuthentication().getRoles())
+                            List.copyOf(event.getAuthentication().getRoles())
                     )
             );
         }
@@ -48,15 +48,14 @@ public class UserRefreshTokenPersistence implements RefreshTokenPersistence {
         return Flux.create(emitter -> {
             final RefreshToken existingRefreshToken = IN_MEMORY_REFRESH_TOKEN_STORE.get(refreshToken);
 
-            if(existingRefreshToken != null){
-                if(existingRefreshToken.isRevoked()){
+            if (existingRefreshToken != null) {
+                if (existingRefreshToken.revoked()) {
                     emitter.error(new OauthErrorResponseException(INVALID_GRANT, "refresh token revoked", null));
                 } else {
-                emitter.next(Authentication.build(existingRefreshToken.getUsername(),existingRefreshToken.getRoles()));
-                emitter.complete();
+                    emitter.next(Authentication.build(existingRefreshToken.username(), existingRefreshToken.roles()));
+                    emitter.complete();
                 }
-            }
-            else{
+            } else {
                 emitter.error(new OauthErrorResponseException(INVALID_GRANT, "refresh token not found", null));
             }
         }, FluxSink.OverflowStrategy.ERROR);
